# symsan

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  README_RUN_DUMMY.md  dummy.c  dummy_build.sh  dummy_reward.sh  traces.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
compiler/: ko_clang.c
docs/: reward_fix.md
driver/: CMakeLists.txt  fgtest.cpp
examples/: control_temp.c  control_temp_build.sh  control_temp_reward.sh  control_temp_traces.json  dummy.c  dummy_build.sh  dummy_reward.sh  test_seed_formats.sh  xor_build.sh  xor_reward.sh
include/: parse-z3.h
instrumentation/: CMakeLists.txt  CTWMIndexPass.cpp  CTWMIndexPass.h  TaintPass.cpp
runtime/dfsan/: CMakeLists.txt  ctwm_trace.c
solvers/: z3-ts.cpp
web-service/: CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  QUICKSTART.md  README.md  UPDATE_SUMMARY.md  app.py  build_docker.sh  compose.yml  example_client.py  fgtest_wrapper.py  run.sh  setup_bin.sh  test_api.sh
